--- a/public/index.html
+++ b/public/index.html
@@ -145,11 +145,26 @@
           </div>
         </div>
       </div>
+
     </div>
+    <div class="row new-product-row"></div>
+
   </div>
+
+  <form class="form-new-product">
+    your new product:<br>
+    <input type="text" class="new-product"><br>
+    price:<br>
+    <input type="text" class="new-price"><br><br>
+    <input type="file" class="new-img">
+    <button type="button" class="btn add-new-product">ADD</button>
+  </form>
+
+
     <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="handlebars/dist/handlebars.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="addItem.js"></script>
 </body>
 </html>
